control-service: remove errors on job deployment
Signed-off-by: murphp15 <murphp15@tcd.ie>